# zephyr-lang-rust

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  ci-manifest.yml  dt-rust.yaml  main.c  rust-toolchain.toml
.github/workflows/: build.yml  docs.yml
docgen/: .gitignore  CMakeLists.txt  Cargo.toml  prj.conf
docgen/.cargo/: config.toml
docgen/src/: lib.rs
docs/: top-index.html
etc/: add-hash.py  platforms.txt
samples/async-philosophers/: CMakeLists.txt  Cargo.toml  prj.conf  sample.yaml
samples/async-philosophers/src/: async_sem.rs  lib.rs
samples/bench/: CMakeLists.txt  Cargo.toml  prj.conf  sample.yaml
samples/bench/src/: basesem.rs  executor.rs  lib.rs
samples/blinky/: CMakeLists.txt  Cargo.toml  build.rs  sample.yaml
samples/blinky/src/: lib.rs
samples/button/: CMakeLists.txt  Cargo.toml  README.rst  build.rs  prj.conf  sample.yaml
samples/button/src/: lib.rs
samples/embassy/: CMakeLists.txt  Cargo.toml  prj.conf  sample.yaml
samples/embassy/src/: lib.rs
samples/hello_world/: CMakeLists.txt  Cargo.toml  prj.conf  sample.yaml
samples/hello_world/src/: lib.rs
samples/net/echo_server/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf  sample.yaml
samples/net/echo_server/boards/: qemu_cortex_m3.conf
samples/net/echo_server/src/: lib.rs
samples/philosophers/: Cargo.toml  Kconfig  build.rs  prj.conf  sample.yaml
samples/philosophers/src/: channel.rs  condsync.rs  dynsemsync.rs  lib.rs  semsync.rs  sysmutex.rs
samples/work-philosophers/: CMakeLists.txt  Cargo.toml  Kconfig  prj.conf  sample.yaml
samples/work-philosophers/boards/: rpi_pico.conf
samples/work-philosophers/src/: async_sem.rs  hand_worker.rs  lib.rs
scripts/: kconfig-bool-options.py
tests/drivers/gpio-async/: CMakeLists.txt  Cargo.toml  README.md  prj.conf  testcase.yaml
tests/drivers/gpio-async/boards/: rpi_pico.overlay
tests/drivers/gpio-async/src/: lib.rs
tests/drivers/i2c-controller/: CMakeLists.txt  Cargo.toml  prj.conf  testcase.yaml
tests/drivers/i2c-controller/boards/: tiny2040.overlay
tests/drivers/i2c-controller/src/: lib.rs
tests/drivers/i2c-target/: CMakeLists.txt  Cargo.toml  prj.conf  testcase.yaml
tests/drivers/i2c-target/boards/: tiny2040.overlay
tests/drivers/i2c-target/src/: lib.rs
tests/drivers/led-strip/: CMakeLists.txt  Cargo.toml  prj.conf  testcase.yaml
tests/drivers/led-strip/src/: lib.rs
tests/drivers/pwm-led/: CMakeLists.txt  Cargo.toml  prj.conf  testcase.yaml  testcase.yaml.disabled
tests/drivers/pwm-led/boards/: tiny2040.conf  tiny2040.overlay
tests/drivers/pwm-led/src/: lib.rs
tests/net/tcp/: CMakeLists.txt  Cargo.toml  prj.conf  testcase.yaml
tests/net/tcp/src/: lib.rs
tests/net/udp/: CMakeLists.txt  Cargo.toml  prj.conf  testcase.yaml
tests/net/udp/src/: lib.rs
tests/time/: CMakeLists.txt  Cargo.toml  testcase.yaml
tests/time/src/: lib.rs  times.c
tests/timer/: CMakeLists.txt  Cargo.toml  prj.conf  testcase.yaml
tests/timer/src/: lib.rs
zephyr/: Cargo.toml  DESIGN.md  build.rs  module.yml
zephyr-build/: .gitignore  Cargo.toml  DESIGN.md
zephyr-build/src/: devicetree.rs  lib.rs
zephyr-build/src/devicetree/: augment.rs  config.rs  dts.pest  ordmap.rs  output.rs  parse.rs
zephyr-macros/: Cargo.toml  DESIGN.md
zephyr-macros/src/: lib.rs  task.rs
zephyr-sys/: Cargo.toml  DESIGN.md  build.rs  wrapper.h
zephyr-sys/src/: lib.rs
zephyr/src/: align.rs  alloc_impl.rs  device.rs  embassy.rs  error.rs  kio.rs  lib.rs  logging.rs  object.rs  printk.rs  rtio.rs  simpletls.rs  sync.rs  sys.rs  thread.rs  time.rs  timer.rs  work.rs
zephyr/src/device/: flash.rs  gpio.rs  i2c.rs  led.rs  led_strip.rs  uart.rs
zephyr/src/device/uart/: irq.rs
zephyr/src/embassy/: executor.rs  time_driver.rs
zephyr/src/kio/: sync.rs
zephyr/src/log/: log_printk.rs
zephyr/src/logging/: impl_printk.rs  impl_zlog.rs
zephyr/src/net/: ipaddr.rs  mod.rs  socket.rs  udp.rs
zephyr/src/sync/: channel.rs  mutex.rs  spinmutex.rs
zephyr/src/sync/channel/: counter.rs
zephyr/src/sys/: queue.rs  sync.rs  thread.rs  timer.rs
zephyr/src/sys/sync/: mutex.rs  semaphore.rs
zephyr/src/work/: futures.rs
