# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
name = "zephyr-build"
version = "3.7.0"
edition = "2021"
description = """
Build-time support for Rust-based applications that run on Zephyr.
Provides utilities for accessing Kconfig and devicetree information.
"""

# These are needed at build time.
# Whether these need to be vendored is an open question.  They are not
# used by the core Zephyr tree, but are needed by zephyr applications.
[dependencies]
anyhow = "1.0.93"
regex = "1.10.3"
