# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
name = "zephyr-sys"
version = "3.7.0"
edition = "2021"
description = """
Zephyr low-level API bindings.
"""

# These are needed at build time.
# Whether these need to be vendored is an open question.  They are not
# used by the core Zephyr tree, but are needed by zephyr applications.
[build-dependencies]
anyhow = "1.0"
bindgen = { version = "0.70.1", features = ["experimental"] }
# zephyr-build = { version = "3.7.0", path = "../zephyr-build" }
