# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
name = "zephyr"
version = "3.7.0"
edition = "2021"
description = """
Functionality for Rust-based applications that run on Zephyr.
"""

[dependencies]
zephyr-sys = { version = "3.7.0", path = "../zephyr-sys" }
log = "0.4.22"

# Although paste is brought in, it is a compile-time macro, and is not linked into the application.
paste = "1.0"

[dependencies.fugit]
version = "0.3.7"

[dependencies.critical-section]
version = "1.1.2"
features = ["restore-state-u32"]

[dependencies.portable-atomic]
version = "1.7.0"
# We assume that the instances where portable atomic must provide its own implementation (target
# does not have atomic instructions), are only single CPU. This is the case currently with Zephyr,
# so this should only match the same implementation.
# features = ["fallback", "unsafe-assume-single-core"]
features = ["fallback", "critical-section"]

# Provides an implementation of Arc that either directs to 'alloc', or implements using portable
# atomic.
[dependencies.portable-atomic-util]
version = "0.2.2"
# Technically, this should only be used if the Rust feature for allocation is defined. But, it
# should be safe to build the crate even if the Rust code doesn't use it because of configs.
features = ["alloc"]

# Gives us an ArrayDeque type to implement a basic ring buffer.
[dependencies.arraydeque]
version = "0.5.1"
default-features = false

# These are needed at build time.
# Whether these need to be vendored is an open question.  They are not
# used by the core Zephyr tree, but are needed by zephyr applications.
[build-dependencies]
zephyr-build = { version = "3.7.0", path = "../zephyr-build" }
