# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "A sample hello world application in Rust"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = { version = "0.1.0", features = ["time-driver", "executor-zephyr"] }
static_cell = "2.1"

embassy-executor = { version = "0.7.0", features = ["log", "task-arena-size-2048"] }
embassy-sync = "0.6.2"

# TODO: Don't hardcode the tickrate.
embassy-time = { version = "0.4.0", features = ["tick-hz-10_000"] }

# Dependencies that are used by build.rs.
[build-dependencies]
zephyr-build = "0.1.0"

[profile.release]
debug-assertions = true
overflow-checks = true
debug = true
