# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "A sample hello world application in Rust"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = { version = "0.1.0", features = ["time-driver", "executor-zephyr"] }
static_cell = "2.1"

embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-sync = "0.8.0"

# For real builds, you should figure out your target's tick rate and set the appropriate feature,
# like in these examples.  Without this, embassy-time will assume a 1Mhz tick rate, and every time
# operation will involve a conversion.
embassy-time = "0.5.1"
# embassy-time = { version = "0.5.1", features = ["tick-hz-10_000"] }
# embassy-time = { version = "0.5.1", features = ["tick-hz-100"] }

# Dependencies that are used by build.rs.
[build-dependencies]
zephyr-build = "0.1.0"

[profile.release]
debug-assertions = true
overflow-checks = true
debug = true
