# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "A sample hello world application in Rust"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = "0.1.0"

# Dependencies that are used by build.rs.
[build-dependencies]
zephyr-build = "0.1.0"

[profile.release]
debug-assertions = true
overflow-checks = true
debug = true
opt-level = "z"
lto = true

[profile.dev]
debug = 2
lto = true
opt-level = "z"
