# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "A sample hello world application in Rust"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = { version = "0.1.0", features = ["time-driver"] }
log = "0.4.22"
static_cell = "2.1"
heapless = "0.8"

[dependencies.embassy-executor]
version = "0.7.0"
# path = "../../embassy/embassy-executor"
features = [
  "log",
  "task-arena-size-2048",
]

[dependencies.embassy-futures]
version = "0.1.1"

[dependencies.embassy-sync]
version = "0.6.2"

[dependencies.embassy-time]
version = "0.4.0"
# For real builds, you should figure out your target's tick rate and set the appropriate feature,
# like in these examples.  Without this, embassy-time will assume a 1Mhz tick rate, and every time
# operation will involve a conversion.
#features = ["tick-hz-10_000"]

[dependencies.critical-section]
version = "1.2"

[features]
# default = ["executor-thread"]
default = ["executor-zephyr"]

executor-thread = [
  "embassy-executor/arch-cortex-m",
  "embassy-executor/executor-thread",
]

executor-zephyr = [
  "zephyr/executor-zephyr",
]

[profile.dev]
opt-level = 1

[profile.release]
debug = true
