# Copyright (c) 2025 Witekio
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "Echo's back any data received from a UDP network socket to the sender"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = "0.1.0"
log = "0.4.22"
static_cell = "2.1.0"

[build-dependencies]
zephyr-build = "0.1.0"
