# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "Test async gpios"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = { version = "0.1.0", features = ["time-driver", "executor-zephyr", "async-drivers"] }
log = "0.4.22"
static_cell = "2.1"
heapless = "0.8"

[dependencies.embassy-executor]
version = "0.10.0"
features = [
  "log",
]

[dependencies.embassy-futures]
version = "0.1.2"

[dependencies.embassy-sync]
version = "0.8.0"

[dependencies.embassy-time]
version = "0.5.1"
features = ["tick-hz-10_000"]

[dependencies.critical-section]
version = "1.2"

[profile.dev]
opt-level = 1

[profile.release]
debug = true
